--- a/notebooks/script_versed_chimpanzee_10.ipynb
+++ b/notebooks/script_versed_chimpanzee_10.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Team Name: Versed Chimpanzee\n",
     "# Group Members:\n",
-    "#    Berk Sudan: berk.sudan@protonmail.com\n",
+    "#    Berk Sudan: \n",
     "#    Li Zhou: lzhou.info@gmail.com\n",
     "#    Saqib Khan: asaqibkhans@gmail.com\n",
     "#    Teofil Bodea: teofil.bodea@gmail.com"
